converted the map into a list